--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,85 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../public/style.css" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>E-learning</title>
   </head>
-  <body></body>
+  <body class="bg-customWhite font-Be-Vietnam-Pro">
+    <div class="px-2 py-6 md:py-4 md:px-4">
+      <header class="flex flex-col gap-3">
+        <div
+          class="bg-darkCustomOrange flex items-center justify-between sm:justify-center text-white py-3 md:py-4 px-2 text-xs sm:gap-6 rounded-md"
+        >
+          <p>Free Courses 🌟 Sale Ends Soon, Get It Now</p>
+          <div class="text-xs">
+            <svg
+              width="21"
+              height="21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M3.5 10.5a.75.75 0 01.75-.75h10.638L10.73 5.79a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H4.25a.75.75 0 01-.75-.75z"
+                fill="#fff"
+              />
+            </svg>
+          </div>
+        </div>
+        <nav class="flex justify-between items-center">
+          <!-- Navbar Logo & links  -->
+          <div>
+            <svg
+              width="40"
+              height="41"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect y=".5" width="40" height="40" rx="6" fill="#FF9500" />
+              <path
+                d="M8.272 32.846l8.025-8.025h8.025v-8.025l8.024 8.025-8.024 8.025H8.272zM8.272 16.796l8.025 8.025v-8.025h8.025l8.024-8.024H16.297l-8.025 8.024z"
+                fill="#fff"
+              />
+            </svg>
+          </div>
+          <!-- login Btn -->
+          <div class="flex items-center gap-2">
+            <div>
+              <a
+                href="#"
+                class="px-5 py-3 hover:bg-darkCustomOrange rounded-lg hover:text-white text-sm md:text-base transition-all duration-200"
+                >Sign Up</a
+              >
+              <a
+                href="#"
+                class="px-5 py-3 bg-darkCustomOrange rounded-lg text-white text-sm md:text-base transition-all duration-200"
+                >Login</a
+              >
+            </div>
+            <div>
+              <svg
+                width="34"
+                height="35"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M4.25 10.063C4.25 9.476 4.726 9 5.313 9h23.375a1.063 1.063 0 010 2.125H5.313a1.063 1.063 0 01-1.063-1.063zm0 7.437c0-.587.476-1.063 1.063-1.063h23.375a1.063 1.063 0 010 2.125H5.313A1.063 1.063 0 014.25 17.5zm11.688 7.438c0-.587.475-1.063 1.062-1.063h11.688a1.063 1.063 0 010 2.125H17a1.063 1.063 0 01-1.063-1.063z"
+                  fill="#262626"
+                />
+              </svg>
+            </div>
+          </div>
+        </nav>
+      </header>
+    </div>
+  </body>
 </html>
