add hovering effect

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="px-2 py-6 md:py-4 md:px-4 3xl:max-w-screen-3xl mx-auto">
       <header class="flex flex-col gap-3">
         <div
-          class="bg-darkCustomOrange flex items-center justify-between sm:justify-center text-white py-3 md:py-4 px-2 text-xs 3xl:text-xl sm:gap-6 rounded-md"
+          class="bg-CustomOrange flex items-center justify-between sm:justify-center text-white py-3 md:py-4 px-2 text-xs 3xl:text-xl sm:gap-6 rounded-md"
         >
           <p>Free Courses 🌟 Sale Ends Soon, Get It Now</p>
           <div class="text-xs">
@@ -95,12 +95,12 @@
             <div>
               <a
                 href="#"
-                class="px-5 py-3 hover:bg-darkCustomOrange rounded-lg hover:text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
+                class="px-5 py-3 hover:bg-CustomOrange rounded-lg hover:text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
                 >Sign Up</a
               >
               <a
                 href="#"
-                class="px-5 py-3 bg-darkCustomOrange rounded-lg text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
+                class="px-5 py-3 bg-CustomOrange hover:bg-CustomOrangesecondary rounded-lg text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
                 >Login</a
               >
             </div>
