add benefits section

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
         </nav>
       </header>
 
-      <main class="lg:px-12 flex flex-col gap-16">
+      <main class="lg:px-12 flex flex-col gap-6 md:gap-16 pb-20">
         <!-- Heros Section -->
 
         <section>
@@ -202,7 +202,7 @@
         </section>
         <!-- Feature-Row Section -->
         <section>
-          <div class="flex flex-col gap-16">
+          <div class="flex flex-col gap-10 md:gap-16">
             <div class="md:p-4 bg-white">
               <ul class="grid grid-cols-3 sm:grid-cols-5 md:grid-cols-7">
                 <li class="flex justify-center py-5">
@@ -440,6 +440,246 @@
                   />
                 </svg>
               </button>
+            </div>
+          </div>
+        </section>
+        <!-- benefits Section -->
+        <section>
+          <div class="flex flex-col gap-16">
+            <div class="grid grid-cols-1 sm:grid-cols-6 gap-5 sm:gap-0">
+              <div class="sm:col-span-4 flex flex-col gap-2">
+                <h2 class="text-4xl font-semibold">Benefits</h2>
+                <p class="text-lightCustomGrey">
+                  Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam
+                  eget elit id imperdiet et. Cras eu sit dignissim lorem nibh
+                  et. Ac cum eget habitasse in velit fringilla feugiat senectus
+                  in.
+                </p>
+              </div>
+              <div class="sm:col-start-6 flex sm:justify-end items-end">
+                <button
+                  class="px-5 py-3 bg-white rounded-lg transition-all duration-200 hover:bg-CustomOrange hover:text-white"
+                >
+                  View All
+                </button>
+              </div>
+              <div></div>
+            </div>
+            <div
+              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 px-2"
+            >
+              <!-- box 1 -->
+              <div
+                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+              >
+                <div class="flex justify-end">
+                  <p class="text-6xl font-bold">01</p>
+                </div>
+                <div class="flex flex-col gap-2">
+                  <h3 class="text-xl font-semibold">
+                    Flexible Learning Schedule
+                  </h3>
+                  <p class="text-lightCustomGrey">
+                    Fit your coursework around your existing commitments and
+                    obligations.
+                  </p>
+                </div>
+                <div class="flex justify-end">
+                  <div
+                    class="bg-mainbgColor inline-block p-3 border rounded-md"
+                  >
+                    <svg
+                      width="26"
+                      height="26"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M6.786 19.214c.38.381.998.381 1.378 0L17.55 9.83v7.396a.975.975 0 101.95 0v-9.75a.975.975 0 00-.975-.975h-9.75a.975.975 0 100 1.95h7.396l-9.385 9.386a.975.975 0 000 1.378z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- box 2 -->
+              <div
+                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+              >
+                <div class="flex justify-end">
+                  <p class="text-6xl font-bold">02</p>
+                </div>
+                <div class="flex flex-col gap-2">
+                  <h3 class="text-xl font-semibold">Expert Instruction</h3>
+                  <p class="text-lightCustomGrey">
+                    Learn from industry experts who have hands-on experience in
+                    design and development.
+                  </p>
+                </div>
+                <div class="flex justify-end">
+                  <div
+                    class="bg-mainbgColor inline-block p-3 border rounded-md"
+                  >
+                    <svg
+                      width="26"
+                      height="26"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M6.786 19.214c.38.381.998.381 1.378 0L17.55 9.83v7.396a.975.975 0 101.95 0v-9.75a.975.975 0 00-.975-.975h-9.75a.975.975 0 100 1.95h7.396l-9.385 9.386a.975.975 0 000 1.378z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- box 3 -->
+              <div
+                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+              >
+                <div class="flex justify-end">
+                  <p class="text-6xl font-bold">03</p>
+                </div>
+                <div class="flex flex-col gap-2">
+                  <h3 class="text-xl font-semibold">
+                    Diverse Course Offerings
+                  </h3>
+                  <p class="text-lightCustomGrey">
+                    Explore a wide range of design and development courses
+                    covering various topics.
+                  </p>
+                </div>
+                <div class="flex justify-end">
+                  <div
+                    class="bg-mainbgColor inline-block p-3 border rounded-md"
+                  >
+                    <svg
+                      width="26"
+                      height="26"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M6.786 19.214c.38.381.998.381 1.378 0L17.55 9.83v7.396a.975.975 0 101.95 0v-9.75a.975.975 0 00-.975-.975h-9.75a.975.975 0 100 1.95h7.396l-9.385 9.386a.975.975 0 000 1.378z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- box 4 -->
+              <div
+                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+              >
+                <div class="flex justify-end">
+                  <p class="text-6xl font-bold">04</p>
+                </div>
+                <div class="flex flex-col gap-2">
+                  <h3 class="text-xl font-semibold">Updated Curriculum</h3>
+                  <p class="text-lightCustomGrey">
+                    Access courses with up-to-date content reflecting the latest
+                    trends and industry practices.
+                  </p>
+                </div>
+                <div class="flex justify-end">
+                  <div
+                    class="bg-mainbgColor inline-block p-3 border rounded-md"
+                  >
+                    <svg
+                      width="26"
+                      height="26"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M6.786 19.214c.38.381.998.381 1.378 0L17.55 9.83v7.396a.975.975 0 101.95 0v-9.75a.975.975 0 00-.975-.975h-9.75a.975.975 0 100 1.95h7.396l-9.385 9.386a.975.975 0 000 1.378z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- box 5 -->
+              <div
+                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+              >
+                <div class="flex justify-end">
+                  <p class="text-6xl font-bold">05</p>
+                </div>
+                <div class="flex flex-col gap-2">
+                  <h3 class="text-xl font-semibold">
+                    Practical Projects and Assignments
+                  </h3>
+                  <p class="text-lightCustomGrey">
+                    Develop a portfolio showcasing your skills and abilities to
+                    potential employers.
+                  </p>
+                </div>
+                <div class="flex justify-end">
+                  <div
+                    class="bg-mainbgColor inline-block p-3 border rounded-md"
+                  >
+                    <svg
+                      width="26"
+                      height="26"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M6.786 19.214c.38.381.998.381 1.378 0L17.55 9.83v7.396a.975.975 0 101.95 0v-9.75a.975.975 0 00-.975-.975h-9.75a.975.975 0 100 1.95h7.396l-9.385 9.386a.975.975 0 000 1.378z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- box 6 -->
+              <div
+                class="flex flex-col rounded-lg gap-10 p-10 bg-white transition-all duration-300 hover:-translate-y-2 hover:shadow-lg"
+              >
+                <div class="flex justify-end">
+                  <p class="text-6xl font-bold">06</p>
+                </div>
+                <div class="flex flex-col gap-2">
+                  <h3 class="text-xl font-semibold">
+                    Interactive Learning Environment
+                  </h3>
+                  <p class="text-lightCustomGrey">
+                    Collaborate with fellow learners, exchanging ideas and
+                    feedback to enhance your understanding.
+                  </p>
+                </div>
+                <div class="flex justify-end">
+                  <div
+                    class="bg-mainbgColor inline-block p-3 border rounded-md"
+                  >
+                    <svg
+                      width="26"
+                      height="26"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M6.786 19.214c.38.381.998.381 1.378 0L17.55 9.83v7.396a.975.975 0 101.95 0v-9.75a.975.975 0 00-.975-.975h-9.75a.975.975 0 100 1.95h7.396l-9.385 9.386a.975.975 0 000 1.378z"
+                        fill="#FF9500"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
